:zap: Rename `resourcelabels` to `labels`

--- a/helm-chart/templates/01-service-account.yaml
+++ b/helm-chart/templates/01-service-account.yaml
@@ -4,8 +4,8 @@ kind: ServiceAccount
 metadata:
   creationTimestamp: null
   labels:
-  {{- if .Values.tap.resourcelabels }}
-    {{- toYaml .Values.tap.resourcelabels | nindent 4 }}
+  {{- if .Values.tap.labels }}
+    {{- toYaml .Values.tap.labels | nindent 4 }}
   {{- end }}
   name: kubeshark-service-account
   namespace: {{ .Values.tap.selfnamespace }}
