--- a/helm-chart/templates/06-front-pod.yaml
+++ b/helm-chart/templates/06-front-pod.yaml
@@ -5,8 +5,8 @@ metadata:
   creationTimestamp: null
   labels:
     app: kubeshark-front
-  {{- if .Values.tap.resourcelabels }}
-    {{- toYaml .Values.tap.resourcelabels | nindent 4 }}
+  {{- if .Values.tap.labels }}
+    {{- toYaml .Values.tap.labels | nindent 4 }}
   {{- end }}
   name: kubeshark-front
   namespace: {{ .Values.tap.selfnamespace }}
