--- a/helm-chart/templates/09-worker-daemon-set.yaml
+++ b/helm-chart/templates/09-worker-daemon-set.yaml
@@ -5,8 +5,8 @@ metadata:
   creationTimestamp: null
   labels:
     app: kubeshark-worker-daemon-set
-  {{- if .Values.tap.resourcelabels }}
-    {{- toYaml .Values.tap.resourcelabels | nindent 4 }}
+  {{- if .Values.tap.labels }}
+    {{- toYaml .Values.tap.labels | nindent 4 }}
   {{- end }}
   name: kubeshark-worker-daemon-set
   namespace: {{ .Values.tap.selfnamespace }}
@@ -14,16 +14,16 @@ spec:
   selector:
     matchLabels:
       app: kubeshark-worker-daemon-set
-    {{- if .Values.tap.resourcelabels }}
-      {{- toYaml .Values.tap.resourcelabels | nindent 6 }}
+    {{- if .Values.tap.labels }}
+      {{- toYaml .Values.tap.labels | nindent 6 }}
     {{- end }}
   template:
     metadata:
       creationTimestamp: null
       labels:
         app: kubeshark-worker-daemon-set
-      {{- if .Values.tap.resourcelabels }}
-        {{- toYaml .Values.tap.resourcelabels | nindent 8 }}
+      {{- if .Values.tap.labels }}
+        {{- toYaml .Values.tap.labels | nindent 8 }}
       {{- end }}
       name: kubeshark-worker-daemon-set
       namespace: kubeshark
