--- a/helm-chart/templates/00-namespace.yaml
+++ b/helm-chart/templates/00-namespace.yaml
@@ -4,8 +4,8 @@ kind: Namespace
 metadata:
   creationTimestamp: null
   labels:
-  {{- if .Values.tap.resourcelabels }}
-    {{- toYaml .Values.tap.resourcelabels | nindent 4 }}
+  {{- if .Values.tap.labels }}
+    {{- toYaml .Values.tap.labels | nindent 4 }}
   {{- end }}
   name: {{ .Values.tap.selfnamespace }}
 spec: {}
