--- a/helm-chart/templates/03-cluster-role-binding.yaml
+++ b/helm-chart/templates/03-cluster-role-binding.yaml
@@ -4,8 +4,8 @@ kind: ClusterRoleBinding
 metadata:
   creationTimestamp: null
   labels:
-  {{- if .Values.tap.resourcelabels }}
-    {{- toYaml .Values.tap.resourcelabels | nindent 4 }}
+  {{- if .Values.tap.labels }}
+    {{- toYaml .Values.tap.labels | nindent 4 }}
   {{- end }}
   name: kubeshark-cluster-role-binding
   namespace: {{ .Values.tap.selfnamespace }}
