--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -42,6 +42,7 @@ tap:
   packetcapture: libpcap
   ignoretainted: false
   labels: {}
+  annotations: {}
   nodeselectorterms: []
   ingress:
     enabled: false
