--- a/manifests/complete.yaml
+++ b/manifests/complete.yaml
@@ -255,7 +255,7 @@ spec:
         - name: REACT_APP_HUB_HOST
           value: ' '
         - name: REACT_APP_HUB_PORT
-          value: '8898'
+          value: ':8898'
       image: 'docker.io/kubeshark/front:latest'
       imagePullPolicy: Always
       name: kubeshark-front
