--- a/manifests/complete.yaml
+++ b/manifests/complete.yaml
@@ -1,15 +1,4 @@
 ---
-# Source: kubeshark/templates/00-namespace.yaml
-apiVersion: v1
-kind: Namespace
-metadata:
-  creationTimestamp: null
-  labels:
-  annotations:
-  name: kubeshark
-spec: {}
-status: {}
----
 # Source: kubeshark/templates/01-service-account.yaml
 apiVersion: v1
 kind: ServiceAccount
@@ -18,7 +7,7 @@ metadata:
   labels:
   annotations:
   name: kubeshark-service-account
-  namespace: kubeshark
+  namespace: default
 ---
 # Source: kubeshark/templates/02-cluster-role.yaml
 apiVersion: rbac.authorization.k8s.io/v1
@@ -28,7 +17,7 @@ metadata:
   labels:
   annotations:
   name: kubeshark-cluster-role
-  namespace: kubeshark
+  namespace: default
 rules:
   - apiGroups:
       - ""
@@ -54,7 +43,7 @@ metadata:
   labels:
   annotations:
   name: kubeshark-cluster-role-binding
-  namespace: kubeshark
+  namespace: default
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -62,7 +51,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: kubeshark-service-account
-    namespace: kubeshark
+    namespace: default
 ---
 # Source: kubeshark/templates/05-hub-service.yaml
 apiVersion: v1
@@ -72,7 +61,7 @@ metadata:
   labels:
   annotations:
   name: kubeshark-hub
-  namespace: kubeshark
+  namespace: default
 spec:
   ports:
     - name: kubeshark-hub
@@ -92,7 +81,7 @@ metadata:
   labels:
   annotations:
   name: kubeshark-front
-  namespace: kubeshark
+  namespace: default
 spec:
   ports:
     - name: kubeshark-front
@@ -113,7 +102,7 @@ metadata:
     app: kubeshark-worker-daemon-set
   annotations:
   name: kubeshark-worker-daemon-set
-  namespace: kubeshark
+  namespace: default
 spec:
   selector:
     matchLabels:
@@ -142,9 +131,6 @@ spec:
           image: 'docker.io/kubeshark/worker:latest'
           imagePullPolicy: Always
           name: kubeshark-worker-daemon-set
-          ports:
-            - containerPort: 8897
-              hostPort: 8897
           resources:
             limits:
               cpu: 750m
@@ -196,7 +182,7 @@ metadata:
     app: kubeshark-hub
   annotations:
   name: kubeshark-hub
-  namespace: kubeshark
+  namespace: default
 spec:
   containers:
     - command:
@@ -217,9 +203,6 @@ spec:
       image: 'docker.io/kubeshark/hub:latest'
       imagePullPolicy: Always
       name: kubeshark-hub
-      ports:
-        - containerPort: 80
-          hostPort: 8898
       resources:
         limits:
           cpu: 750m
@@ -246,7 +229,7 @@ metadata:
     app: kubeshark-front
   annotations:
   name: kubeshark-front
-  namespace: kubeshark
+  namespace: default
 spec:
   containers:
     - env:
@@ -259,9 +242,6 @@ spec:
       image: 'docker.io/kubeshark/front:latest'
       imagePullPolicy: Always
       name: kubeshark-front
-      ports:
-        - containerPort: 80
-          hostPort: 8899
       readinessProbe:
         failureThreshold: 3
         periodSeconds: 1
