:bug: Fix the commands in case of `-debug` flag enabled

--- a/helm-chart/templates/04-hub-pod.yaml
+++ b/helm-chart/templates/04-hub-pod.yaml
@@ -17,7 +17,8 @@ metadata:
 spec:
   containers:
     - command:
-        - {{ .Values.tap.debug | ternary "./hub -debug" "./hub" }}
+        - ./hub
+        - {{ .Values.tap.debug | ternary "-debug" "" }}
       env:
         - name: POD_REGEX
           value: '{{ .Values.tap.regex }}'
