--- a/helm-chart/templates/09-worker-daemon-set.yaml
+++ b/helm-chart/templates/09-worker-daemon-set.yaml
@@ -34,7 +34,8 @@ spec:
     spec:
       containers:
         - command:
-            - '{{ .Values.tap.debug | ternary "./worker -debug" "./worker" }}'
+            - ./worker
+            - {{ .Values.tap.debug | ternary "-debug" "" }}
             - -i
             - any
             - -port
