Revert ":bug: Fix the commands in case of `-debug` flag enabled"
This reverts commit 3a2d34647ef9616cf1492b9eb2deb33e4009886e.

--- a/helm-chart/templates/04-hub-pod.yaml
+++ b/helm-chart/templates/04-hub-pod.yaml
@@ -17,8 +17,7 @@ metadata:
 spec:
   containers:
     - command:
-        - ./hub
-        - {{ .Values.tap.debug | ternary "-debug" "" }}
+        - {{ .Values.tap.debug | ternary "./hub -debug" "./hub" }}
       env:
         - name: POD_REGEX
           value: '{{ .Values.tap.regex }}'
