--- a/helm-chart/templates/09-worker-daemon-set.yaml
+++ b/helm-chart/templates/09-worker-daemon-set.yaml
@@ -34,8 +34,7 @@ spec:
     spec:
       containers:
         - command:
-            - ./worker
-            - {{ .Values.tap.debug | ternary "-debug" "" }}
+            - '{{ .Values.tap.debug | ternary "./worker -debug" "./worker" }}'
             - -i
             - any
             - -port
