:zap: Fix the issues related to release namespace

--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -16,7 +16,10 @@ tap:
     host: 127.0.0.1
   regex: .*
   namespaces: []
-  releasenamespace: default
+  release:
+    repo: https://helm.kubeshark.co
+    name: kubeshark
+    namespace: default
   persistentstorage: false
   storagelimit: 200Mi
   storageclass: standard
