:zap: Fix the hub and worker commands

--- a/helm-chart/templates/04-hub-pod.yaml
+++ b/helm-chart/templates/04-hub-pod.yaml
@@ -18,7 +18,7 @@ spec:
   containers:
     - command:
         - ./hub
-        - {{ .Values.tap.debug | ternary "-debug" "" }}
+        {{ .Values.tap.debug | ternary "- -debug" "" }}
       env:
         - name: POD_REGEX
           value: '{{ .Values.tap.regex }}'
