--- a/helm-chart/templates/09-worker-daemon-set.yaml
+++ b/helm-chart/templates/09-worker-daemon-set.yaml
@@ -35,7 +35,7 @@ spec:
       containers:
         - command:
             - ./worker
-            - {{ .Values.tap.debug | ternary "-debug" "" }}
+            {{ .Values.tap.debug | ternary "- -debug" "" }}
             - -i
             - any
             - -port
