Use the `tap.proxy.hub.port` and `tap.proxy.hub.srvport` in the Helm templates

--- a/helm-chart/templates/04-hub-pod.yaml
+++ b/helm-chart/templates/04-hub-pod.yaml
@@ -19,6 +19,8 @@ spec:
     - command:
         - ./hub
         {{ .Values.tap.debug | ternary "- -debug" "" }}
+        - -port
+        - '{{ .Values.tap.proxy.hub.srvport }}'
       env:
         - name: POD_REGEX
           value: '{{ .Values.tap.regex }}'
