--- a/helm-chart/templates/12-nginx-config.yaml
+++ b/helm-chart/templates/12-nginx-config.yaml
@@ -4,6 +4,8 @@ kind: ConfigMap
 metadata:
   name: kubeshark-nginx-config
   namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "kubeshark.labels" . | nindent 4 }}
 data:
   default.conf: |
     server {
