:sparkles: Add `14-module-loader-config-map.yaml` and a Makefile rule that generates it

--- a/helm-chart/templates/13-module-loader.yaml
+++ b/helm-chart/templates/13-module-loader.yaml
@@ -14,7 +14,7 @@ spec:
           containerImage: "kubeshark/module-loader:latest"
           build:
             dockerfileConfigMap:
-              name: my-kmod-dockerfile
+              name: kubeshark-module-loader-dockerfile
           sign:
             certSecret:
               name: cert-secret
