:zap: Change the selector in module loader

--- a/helm-chart/templates/13-module-loader.yaml
+++ b/helm-chart/templates/13-module-loader.yaml
@@ -23,4 +23,4 @@ spec:
             filesToSign:
               - /opt/lib/modules/5.10.0-23-amd64/pf_ring.ko
   selector:
-    node-role.kubernetes.io/worker: ""
+    beta.kubernetes.io/arch: amd64
