:zap: Change the key from `Dockerfile` to `dockerfile` in module loader ConfigMap

--- a/helm-chart/templates/14-module-loader-config-map.yaml
+++ b/helm-chart/templates/14-module-loader-config-map.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     {{- include "kubeshark.labels" . | nindent 4 }}
 data:
-  Dockerfile: |
+  dockerfile: |
     ### Builder image
     ARG TARGETARCH=amd64
     FROM ${TARGETARCH}/debian:bullseye AS builder
