--- a/helm-chart/templates/13-module-loader.yaml
+++ b/helm-chart/templates/13-module-loader.yaml
@@ -1,3 +1,4 @@
+{{ if .Capabilities.APIVersions.Has "kmm.sigs.x-k8s.io/v1beta1" }}
 apiVersion: kmm.sigs.x-k8s.io/v1beta1
 kind: Module
 metadata:
@@ -24,3 +25,4 @@ spec:
               - /opt/lib/modules/5.10.0-23-amd64/pf_ring.ko
   selector:
     beta.kubernetes.io/arch: amd64
+{{- end }}
