--- a/helm-chart/templates/14-module-loader-config-map.yaml
+++ b/helm-chart/templates/14-module-loader-config-map.yaml
@@ -1,3 +1,4 @@
+{{ if .Capabilities.APIVersions.Has "kmm.sigs.x-k8s.io/v1beta1" }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -40,3 +41,4 @@ data:
     COPY --from=builder /work/pfring/kernel/pf_ring.ko /opt/lib/modules/${KERNEL_VERSION}/
 
     RUN depmod -b /opt ${KERNEL_VERSION}
+{{- end }}
