--- a/helm-chart/templates/14-module-loader-config-map.yaml
+++ b/helm-chart/templates/14-module-loader-config-map.yaml
@@ -1,4 +1,4 @@
-{{ if and .Values.kmm.enabled  (.Capabilities.APIVersions.Has "kmm.sigs.x-k8s.io/v1beta1") }}
+{{ if and .Values.tap.kmm.enabled  (.Capabilities.APIVersions.Has "kmm.sigs.x-k8s.io/v1beta1") }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
