:zap: Load the environment variables from `kubeshark-hub-secret` in worker DaemonSet

--- a/helm-chart/templates/09-worker-daemon-set.yaml
+++ b/helm-chart/templates/09-worker-daemon-set.yaml
@@ -40,6 +40,9 @@ spec:
           image: '{{ .Values.tap.docker.registry }}/worker:{{ .Values.tap.docker.tag }}'
           imagePullPolicy: {{ .Values.tap.docker.imagepullpolicy }}
           name: kubeshark-worker-daemon-set
+          envFrom:
+            - secretRef:
+                name: kubeshark-hub-secret
         {{- if .Values.tap.debug }}
           env:
           - name: PROFILING_ENABLED
