:rocket: Add readiness and liveness probes to worker `DaemonSet` (#1414)
Signed-off-by: Luiz Oliveira <ziuloliveira@gmail.com>

--- a/helm-chart/templates/09-worker-daemon-set.yaml
+++ b/helm-chart/templates/09-worker-daemon-set.yaml
@@ -71,6 +71,16 @@ spec:
                 - SYS_MODULE
               drop:
                 - ALL
+          readinessProbe:
+            periodSeconds: 1
+            initialDelaySeconds: 1
+            tcpSocket:
+              port: {{ .Values.tap.proxy.worker.srvport }}
+          livenessProbe:
+            periodSeconds: 1
+            initialDelaySeconds: 1
+            tcpSocket:
+              port: {{ .Values.tap.proxy.worker.srvport }}
           volumeMounts:
             - mountPath: /hostproc
               name: proc
